add new project pjs

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,16 @@
     border: 1px solid lightgray;
     padding: 5px;
 }
-.whitesmoke-frame {
-    border-left: 1px solid gainsboro;
-    border-right: 1px solid gainsboro;
+.gainsboro-frame {
+    border: 1px solid gainsboro;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scroll::-webkit-scrollbar {
+    display: none;
+  }
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scroll {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
 }
