--- a/css/custom.css
+++ b/css/custom.css
@@ -16,3 +16,10 @@
 -ms-overflow-style: none;  /* IE and Edge */
 scrollbar-width: none;  /* Firefox */
 }
+.disabled {
+    border: 1px solid #999999;
+    background-color: darkgrey;
+    color: #fff;
+    padding: 10px;
+    cursor: not-allowed;
+}
