--- a/css/style.default.css
+++ b/css/style.default.css
@@ -620,7 +620,8 @@ footer.main-footer p.social a.gplus {
 }
 
 footer.main-footer p.social a.instagram {
-  background-color: #cd4378;
+  background-color: white;
+  color: black;
 }
 
 footer.main-footer p.social a.email {
