--- a/fragments/projects.html
+++ b/fragments/projects.html
@@ -79,7 +79,7 @@
 					</div>
 
 					<div data-category="html-css" class="reference-item col-lg-3 col-md-6">
-						<div class="reference"><a href="#"><img src="img/portfolio-10.jpg" alt="" class="img-fluid gainsboro-frame">
+						<div class="reference"><a href="#"><img src="img/portfolio-10.jpg" style="width: 100%;" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
 									<div class="inner">
 										<h3 class="h4 reference-title">GWIAZDY POP</h3>
