add cooperation with inspro and sztuka dobrego zycia

--- a/fragments/projects.html
+++ b/fragments/projects.html
@@ -29,6 +29,64 @@
 			<!-- Reference detail-->
 			<div id="references-masonry" data-animate="fadeInUp">
 				<div class="row">
+					<!-- PROJECT -->
+					<div data-category="graphic-2d" class="reference-item col-lg-3 col-md-6">
+						<div class="reference"><a href="#"><img src="img/portfolio-g-2.jpg" alt="" class="img-fluid gainsboro-frame">
+								<div class="overlay">
+									<div class="inner">
+										<h3 class="h5 reference-title">SZTUKA DOBREGO ŻYCIA</h3>
+										<p>
+											Współpraca ze Stow. Sztuka&nbsp;Dobrego&nbsp;Życia
+										</p>
+									</div>
+								</div>
+							</a>
+							<div
+								data-images="img/main-slider-g2-1.jpg,img/main-slider-g2-2.jpg,img/main-slider-g2-3.jpg,img/main-slider-g2-4.jpg,img/main-slider-g2-5.jpg,img/main-slider-g2-6.jpg,img/main-slider-g2-7.jpg"
+								class="sr-only reference-description">
+								<p style="text-align: justify;">
+									Część banerów wykonanych podczas współpracy ze Stowarzyszeniem
+									<a href="https://sztukadobregozycia.pl/">Sztuka Dobrego Życia</a>
+									na przełomie lat 2018-2019.
+								</p>
+								<p style="text-align: justify;">
+									Stowarzyszenie Sztuka Dobrego zajmuje się rozwojem osobistym, 
+									medycyną niekonwecjonalną i szeroko pojętą ezoteryką. Wykonanie grafik
+									wymagało ode mnie zapoznania się z niecodzienną tematyką.
+								</p>
+							</div>
+						</div>
+					</div>
+					<!-- PROJECT -->
+					<div data-category="graphic-2d" class="reference-item col-lg-3 col-md-6">
+						<div class="reference"><a href="#"><img src="img/portfolio-g-1.jpg" alt="" class="img-fluid gainsboro-frame">
+								<div class="overlay">
+									<div class="inner">
+										<h3 class="h4 reference-title">PROJEKTY INSPRO</h3>
+										<p>
+											Współpraca z Instytutem Spraw Obywatelskich
+										</p>
+									</div>
+								</div>
+							</a>
+							<div
+								data-images="img/main-slider-g-1.jpg,img/main-slider-g-2.jpg,img/main-slider-g-3.png,img/main-slider-g-4.jpg,img/main-slider-g-5.jpg"
+								class="sr-only reference-description">
+								<p style="text-align: justify;">
+									Niektóre prace wykonane w ramach współpracy z
+									<a href="https://instytutsprawobywatelskich.pl/">Instytutem Spraw Obywatelskich</a>
+									na przełomie lat 2012-2013.
+								</p>
+								<p style="text-align: justify;">
+									Mile wspominam okres kiedy nabyłem pierwsze doświadczenie jako grafik,
+									wykorzystując zestaw narzędzi Adobe: głównie
+									<a href="https://www.adobe.com/pl/products/photoshop.html">Photoshop</a> oraz
+									<a href="https://www.adobe.com/pl/products/illustrator.html">Illustrator</a>.
+								</p>
+							</div>
+						</div>
+					</div>
+					<!-- PROJECT -->
 					<div data-category="html-css" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-1.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -77,9 +135,10 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="html-css" class="reference-item col-lg-3 col-md-6">
-						<div class="reference"><a href="#"><img src="img/portfolio-10.jpg" style="width: 100%;" alt="" class="img-fluid gainsboro-frame">
+						<div class="reference"><a href="#"><img src="img/portfolio-10.jpg" style="width: 100%;" alt=""
+									class="img-fluid gainsboro-frame">
 								<div class="overlay">
 									<div class="inner">
 										<h3 class="h4 reference-title">GWIAZDY POP</h3>
@@ -116,7 +175,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="bootstrap" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-2.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -148,7 +207,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="bootstrap" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-3.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -185,7 +244,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="wordpress" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-4.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -226,7 +285,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="wordpress" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-5.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -263,7 +322,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT 8 -->
 					<div data-category="java" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-6.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -331,7 +390,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="python" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-7.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -375,7 +434,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="java" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-8.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -419,7 +478,7 @@
 							</div>
 						</div>
 					</div>
-
+					<!-- PROJECT -->
 					<div data-category="java" class="reference-item col-lg-3 col-md-6">
 						<div class="reference"><a href="#"><img src="img/portfolio-9.jpg" alt="" class="img-fluid gainsboro-frame">
 								<div class="overlay">
@@ -460,6 +519,8 @@
 							</div>
 						</div>
 					</div>
+					<!-- PROJECT -->
+
 				</div>
 			</div>
 		</div>
