--- a/fragments/about.html
+++ b/fragments/about.html
@@ -8,7 +8,7 @@
 				<h3>Programowanie webowe</h3>
 				<hr />
 				<p style="text-align: justify;">
-					Mieszkam w Pabianicach. Lubię czytać książki, spędzać czas na grach strategicznych, czasem pisać wiersze.
+					Mieszkam w Łodzi. Lubię czytać książki, spędzać czas na grach strategicznych, czasem pisać wiersze.
 					Rozwijam się od kilku lat jako projektant stron internetowych,
 					zgłębiam zagadnienia z zakresu nowoczesnych technologii w obszarze: <strong>projektowania graficznego i
 						programowania</strong>.
