--- a/fragments/main_nav.html
+++ b/fragments/main_nav.html
@@ -12,7 +12,7 @@
 					<!-- <li class="nav-item"><a href="#testimonials" class="nav-link link-scroll">Testimonials</a></li> -->
 					<li class="nav-item"><a href="#references" class="nav-link link-scroll">Projekty</a></li>
 					<li class="nav-item"><a href="#customers" class="nav-link link-scroll">Technologie</a></li>
-					<li class="nav-item"><a href="http://cecherz.jeti.org.pl/" class="nav-link link-scroll"
+					<li class="nav-item"><a href="https://cecherz.pl/" class="nav-link link-scroll"
 							target="_blank">Blog</a></li>
 					<li class="nav-item"><a href="#contact" class="nav-link link-scroll">Kontakt</a></li>
 				</ul>
