--- a/fragments/top_footer.html
+++ b/fragments/top_footer.html
@@ -6,7 +6,7 @@
 					<i class="fa fa-phone" aria-hidden="true"></i><span>798-996-422</span>
 					<i class="fa fa-envelope" aria-hidden="true"></i>
 					<span>cecherz@outlook.com</span>
-					<i class="fa fa-map-marker" aria-hidden="true"></i><span>Pabianice&nbsp;95-200</span>
+					<i class="fa fa-map-marker" aria-hidden="true"></i><span>Łódź&nbsp;90-616</span>
 				</p>
 			</div>
 		</div>
