add game-dev projects

--- a/fragments/customers.html
+++ b/fragments/customers.html
@@ -44,9 +44,9 @@
 				</div>
 				<div class="col-lg-2 col-md-4 col-sm-6">
 					<div class="customer">
-						<a href="https://www.djangoproject.com/">
-							<img src="img/customers/logo-6.svg" title="Django" data-placement="bottom" data-toggle="tooltip"
-								alt="Django logo" class="img-fluid d-block mx-auto">
+						<a href="https://godotengine.org/">
+							<img src="img/customers/logo-7.svg" title="Godot" data-placement="bottom" data-toggle="tooltip"
+								alt="Godot logo" class="img-fluid d-block mx-auto">
 						</a>
 					</div>
 				</div>
