--- a/fragments/projects.html
+++ b/fragments/projects.html
@@ -14,6 +14,7 @@
 				<li><a href="#" data-filter="graphic-2d">Grafika reklamowa</a></li>
 				<li><a href="#" data-filter="java">Java</a></li>
 				<li><a href="#" data-filter="python">Python</a></li>
+				<li><a href="#" data-filter="game-dev">Game-Dev</a></li>
 			</ul>
 			<div id="detail">
 				<div class="row">
@@ -512,6 +513,124 @@
 										Odwiedź stronę
 									</a>
 									<a href="https://github.com/pangeon/JMTrain" class="btn btn-outline-primary" target="_blank">
+										<i class="fa fa-github"></i>
+										Github
+									</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<!-- PROJECT -->
+
+					<!-- PROJECT -->
+					<div data-category="game-dev" class="reference-item col-lg-3 col-md-6">
+						<div class="reference"><a href="#"><img src="img/portfolio-11.jpg" alt="" class="img-fluid gainsboro-frame">
+								<div class="overlay">
+									<div class="inner">
+										<h3 class="h4 reference-title">V-Galaga</h3>
+										<p>Latasz statkiem kosmicznym 2D i niszczysz kosmitów.</p>
+									</div>
+								</div>
+							</a>
+							<div
+								data-images="img/main-slider11-1.png,img/main-slider11-2.png,img/main-slider11-3.png"
+								class="sr-only reference-description">
+								<p style="text-align: justify;">
+									Gra 2D stworzona z użyciem <a href="https://godotengine.org/">Godot Engine 4</a>
+									z wykorzystaniem gotowych assetów <a href="https://www.iconfinder.com/">IconFinder</a>.
+									oraz muzyki z bazy <a href="https://freesound.org/">FreeSound</a>.
+								</p>
+								<p style="text-align: justify;">
+									Pierwsza moja gra z wykorzystaniem 
+									<a href="https://docs.godotengine.org/en/stable/tutorials/scripting/gdscript/gdscript_basics.html/">GDScript</a>. 
+									Ofeuje walkę z dwoma typami przeciwników: ufo oraz rakieta.
+									Gra posiada licznik żyć i prosty licznik punktów. Zabawę urozmaica dynamiczny dźwięk i muzyka. 
+								</p>
+								<p class="buttons text-center">
+									<a href="https://cecherz.itch.io/v-galaga" class="btn btn-outline-primary" target="_blank">
+										<i class="fa fa-globe"></i>
+										Zagraj w przeglądarce
+									</a>
+									<a href="https://github.com/pangeon/V-Galaga" class="btn btn-outline-primary" target="_blank">
+										<i class="fa fa-github"></i>
+										Github
+									</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<!-- PROJECT -->
+
+					<!-- PROJECT -->
+					<div data-category="game-dev" class="reference-item col-lg-3 col-md-6">
+						<div class="reference"><a href="#"><img src="img/portfolio-12.png" alt="" class="img-fluid gainsboro-frame">
+								<div class="overlay">
+									<div class="inner">
+										<h3 class="h4 reference-title">Duck Adventure</h3>
+										<p>Zabawna gra platformowa w stylu pixel-art.</p>
+									</div>
+								</div>
+							</a>
+							<div
+								data-images="img/main-slider12-1.png,img/main-slider12-2.png,img/main-slider12-3.png, img/main-slider12-4.png, img/main-slider12-5.png"
+								class="sr-only reference-description">
+								<p style="text-align: justify;">
+									Gra 2D stworzona z użyciem <a href="https://godotengine.org/">Godot Engine 4</a>
+									z wykorzystaniem własnej grafiki 
+									oraz częściowo muzyki z bazy <a href="https://freesound.org/">FreeSound</a>.
+									Projekt pomagali stworzyć: Agnieszka Lasota (animacje) oraz Łukasz Cecherz (muzyka wstępna).
+								</p>
+								<p style="text-align: justify;">
+									Gra przygodowo-zręcznościowa oferuje trzy wymagające poziomy (na czas), podczas pokonywania których 
+									spotkać można przeciwników w postaci zwierząt: wrogę, koguta, piranię. 
+									Klimat zabawy urozmaica wiele ozdób w postaci: drzew, kwiatów, uli, płotów rodem z prawdziwej wsi. 
+									Ścieżka melodyczna wpisuje się w iddyliczny klimat.    
+								</p>
+								<p class="buttons text-center">
+									<a href="https://cecherz.itch.io/duck-adventure" class="btn btn-outline-primary" target="_blank">
+										<i class="fa fa-globe"></i>
+										Zagraj w przeglądarce
+									</a>
+									<a href="https://github.com/pangeon/DuckAdventure" class="btn btn-outline-primary" target="_blank">
+										<i class="fa fa-github"></i>
+										Github
+									</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<!-- PROJECT -->
+
+					<!-- PROJECT -->
+					<div data-category="game-dev" class="reference-item col-lg-3 col-md-6">
+						<div class="reference"><a href="#"><img src="img/portfolio-13.png" alt="" class="img-fluid gainsboro-frame">
+								<div class="overlay">
+									<div class="inner">
+										<h3 class="h4 reference-title">Pixel Mania</h3>
+										<p>Minimalistyczna gra logiczna z zielonymi pikselami.</p>
+									</div>
+								</div>
+							</a>
+							<div
+								data-images="img/main-slider13-1.png,img/main-slider13-2.png,img/main-slider13-3.png"
+								class="sr-only reference-description">
+								<p style="text-align: justify;">
+									Minimalistyczna gra 2D stworzona z użyciem <a href="https://godotengine.org/">Godot Engine 4</a>
+									z wykorzystaniem muzyki klasycznej z bazy <a href="https://freesound.org/">FreeSound</a>.
+									W warstwie wizualnej ograniczona do zielonych kwadratowych kształtów.
+								</p>
+								<p style="text-align: justify;">
+									Gra logiczna oferuje 10 poziom o rosnącym, bardzo wymagającym poziomie trudności. 
+									Celem rozgrywki jest uniknięcie pułapek pokonanie labiryntu. Gra zawiera kompozycję utworów:
+									Chopin'a, Granados'a, Bach'a, Debussy'ego oraz Marii Dolores Knoop. Celem zabawy jest
+									głębokie odprężenie przy muzyce.   
+								</p>
+								<p class="buttons text-center">
+									<a href="https://cecherz.itch.io/pixel-mania" class="btn btn-outline-primary" target="_blank">
+										<i class="fa fa-globe"></i>
+										Zagraj w przeglądarce
+									</a>
+									<a href="https://github.com/pangeon/Pixel-Mania" class="btn btn-outline-primary" target="_blank">
 										<i class="fa fa-github"></i>
 										Github
 									</a>
